# Backup_Utility

./: .gitignore  Cargo.toml  LICENSE  README.md  auto_backup.sh
docs/codeReviewReports/: code-review-2026-06-16.md
src/: app.rs  backup_entry.rs  backup_runner.rs  builder.rs  compressor.rs  config.rs  main.rs  project_backup.rs  validation.rs
src/ui/: entry_list.rs  mod.rs  progress.rs  project_backup.rs  settings.rs
